--- a/07-2 Regular Expressions.ipynb
+++ b/07-2 Regular Expressions.ipynb
@@ -204,18 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Peter Hansen', 'Peter Beier', 'Peter Jensen', 'Peter Kold', 'Peter Harold']\n"
-     ]
+     "data": {
+      "text/plain": "['Peter Hansen', 'Peter Beier', 'Peter Jensen', 'Peter Kold', 'Peter Harold']"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "import re\n",
+    "peter_reg = re.compile(r'Peter \\w+') # Hvis man sætter parantes omkring (Peter) og (\\w+), ville resultatet returneres som tre grupper: Hele navnet, fornavn, efternavn\n",
+    "peter_str = 'Peter Hansen was meeting up with Jacob Fransen for a quick lunch, but first he had to go by Peter Beier to pick up some chokolate for his wife. Meanwhile Pastor Peter Jensen was going to church to give his sermon for the same 3 people in his parish. Those were Peter Kold and Henrik Halberg plus a third person who had recently moved here from Norway called Peter Harold'\n",
+    "res = peter_reg.findall(peter_str)\n",
+    "res"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,159 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "A Henning Gamborg Møller\n",
-      "Klostergade 28\n",
-      "6760 Ribe\n",
-      "61 69 03 76\n",
-      "\n",
-      "A K Møller\n",
-      "Bregnerødvej 75, st. 0002\n",
-      "3460 Birkerød\n",
-      "75 50 75 14\n",
-      "\n",
-      "A Møller\n",
-      "Violvej 3\n",
-      "Ø. Bjerregrav\n",
-      "8920 Randers NV\n",
-      "86 45 44 36\n",
-      "\n",
-      "A Møller\n",
-      "Hyrdevej 16A\n",
-      "7000 Fredericia\n",
-      "76 42 00 81\n",
-      "\n",
-      "A Møller\n",
-      "Brammersgade 45\n",
-      "8000 Aarhus C\n",
-      "86 13 22 99\n",
-      "\n",
-      "A Møller\n",
-      "Dalstræde 11\n",
-      "Heltborg\n",
-      "7760 Hurup Thy\n",
-      "97 95 20 01\n",
-      "\n",
-      "A Møller\n",
-      "Jørgensgaardvej 13\n",
-      "6240 Løgumkloster\n",
-      "74 74 36 62\n",
-      "\n",
-      "A Møller Andersen\n",
-      "Gammel Holtevej 60\n",
-      "Gl Holte\n",
-      "2840 Holte\n",
-      "45 80 47 14\n",
-      "\n",
-      "A Møller Jensen\n",
-      "Viborgvej 115, 1. TV\n",
-      "Hasle\n",
-      "8210 Aarhus V\n",
-      "60 94 39 04\n",
-      "\n",
-      "A Møller Sørensen\n",
-      "Korsørgade 4, 6. tv\n",
-      "2100 København Ø\n",
-      "35 38 97 81\n",
-      "\n",
-      "A Porse Møller\n",
-      "Røddikvej 60\n",
-      "8464 Galten\n",
-      "86 94 66 60\n",
-      "\n",
-      "Aage Beck Møller\n",
-      "Rødding Nørregade 8\n",
-      "6630 Rødding\n",
-      "20 44 00 35\n",
-      "\n",
-      "Aage Bojsen-Møller\n",
-      "Noret 3\n",
-      "4780 Stege\n",
-      "55 81 46 76\n",
-      "\n",
-      "Aage Christian Møller Andersen\n",
-      "Jordemodervej 7\n",
-      "Bislev\n",
-      "9240 Nibe\n",
-      "20 83 70 65\n",
-      "\n",
-      "Aage Hansen Møller\n",
-      "Filippavej 38\n",
-      "Hundstrup\n",
-      "5762 Vester Skerninge\n",
-      "62 24 10 81\n",
-      "\n",
-      "Aage Jan Møller\n",
-      "Næsborgvej 50, st. th\n",
-      "2650 Hvidovre\n",
-      "20 83 88 62\n",
-      "\n",
-      "Aage Karl Møller\n",
-      "Dyrevænget 21\n",
-      "Tibirke Sand\n",
-      "3300 Frederiksværk\n",
-      "51 15 15 66\n",
-      "\n",
-      "Aage Majbom Møller\n",
-      "Pilelunden 23\n",
-      "5550 Langeskov\n",
-      "28 59 06 93\n",
-      "\n",
-      "Aage Martin Møller\n",
-      "Almind Østergade 15A, 1. tv\n",
-      "6051 Almind\n",
-      "21 48 73 79\n",
-      "\n",
-      "Aage Møller\n",
-      "Ørritslev Gade 7\n",
-      "Ørritslev\n",
-      "5450 Otterup\n",
-      "64 82 11 54\n",
-      "\n",
-      "Aage Møller\n",
-      "Knudsvej 1\n",
-      "8586 Ørum Djurs\n",
-      "40 10 80 76\n",
-      "\n",
-      "Aage Møller\n",
-      "Fruevej 4\n",
-      "7900 Nykøbing M\n",
-      "21 79 64 18\n",
-      "\n",
-      "Aage Møller\n",
-      "Dybdevej 30\n",
-      "Bolbro\n",
-      "5200 Odense V\n",
-      "23 66 57 00\n",
-      "\n",
-      "Aage Møller\n",
-      "Hammelmosevej 12\n",
-      "9700 Brønderslev\n",
-      "60 45 79 69\n",
-      "\n",
-      "Aage Møller\n",
-      "Birkevej 6\n",
-      "8370 Hadsten\n",
-      "29 68 03 25\n"
-     ]
+     "text": "A Henning Gamborg Møller\nKlostergade 28\n6760 Ribe\n61 69 03 76\n\nA K Møller\nBregnerødvej 75, st. 0002\n3460 Birkerød\n75 50 75 14\n\nA Møller\nViolvej 3\nØ. Bjerregrav\n8920 Randers NV\n86 45 44 36\n\nA Møller\nHyrdevej 16A\n7000 Fredericia\n76 42 00 81\n\nA Møller\nBrammersgade 45\n8000 Aarhus C\n86 13 22 99\n\nA Møller\nDalstræde 11\nHeltborg\n7760 Hurup Thy\n97 95 20 01\n\nA Møller\nJørgensgaardvej 13\n6240 Løgumkloster\n74 74 36 62\n\nA Møller Andersen\nGammel Holtevej 60\nGl Holte\n2840 Holte\n45 80 47 14\n\nA Møller Jensen\nViborgvej 115, 1. TV\nHasle\n8210 Aarhus V\n60 94 39 04\n\nA Møller Sørensen\nKorsørgade 4, 6. tv\n2100 København Ø\n35 38 97 81\n\nA Porse Møller\nRøddikvej 60\n8464 Galten\n86 94 66 60\n\nAage Beck Møller\nRødding Nørregade 8\n6630 Rødding\n20 44 00 35\n\nAage Bojsen-Møller\nNoret 3\n4780 Stege\n55 81 46 76\n\nAage Christian Møller Andersen\nJordemodervej 7\nBislev\n9240 Nibe\n20 83 70 65\n\nAage Hansen Møller\nFilippavej 38\nHundstrup\n5762 Vester Skerninge\n62 24 10 81\n\nAage Jan Møller\nNæsborgvej 50, st. th\n2650 Hvidovre\n20 83 88 62\n\nAage Karl Møller\nDyrevænget 21\nTibirke Sand\n3300 Frederiksværk\n51 15 15 66\n\nAage Majbom Møller\nPilelunden 23\n5550 Langeskov\n28 59 06 93\n\nAage Martin Møller\nAlmind Østergade 15A, 1. tv\n6051 Almind\n21 48 73 79\n\nAage Møller\nØrritslev Gade 7\nØrritslev\n5450 Otterup\n64 82 11 54\n\nAage Møller\nKnudsvej 1\n8586 Ørum Djurs\n40 10 80 76\n\nAage Møller\nFruevej 4\n7900 Nykøbing M\n21 79 64 18\n\nAage Møller\nDybdevej 30\nBolbro\n5200 Odense V\n23 66 57 00\n\nAage Møller\nHammelmosevej 12\n9700 Brønderslev\n60 45 79 69\n\nAage Møller\nBirkevej 6\n8370 Hadsten\n29 68 03 25\n"
     }
    ],
    "source": [
     "import re\n",
-    "with open('./addresses.txt') as f:\n",
+    "with open('./addresses.txt', encoding='UTF-8') as f:\n",
     "    addresses = f.read()\n",
     "\n",
-    "print(addresses)\n"
+    "print(addresses)"
    ]
   },
   {
@@ -594,6 +463,42 @@
     "  * all city names with corresponding zip code\n",
     "  * all street names"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "['A K Møller', 'A Møller', 'A Møller', 'A Møller', 'A Møller', 'A Møller', 'A Møller Andersen', 'A Møller Jensen', 'A Møller Sørensen', 'A Porse Møller', 'Aage Beck Møller', 'Aage Bojsen-Møller', 'Aage Christian Møller Andersen', 'Aage Hansen Møller', 'Aage Jan Møller', 'Aage Karl Møller', 'Aage Majbom Møller', 'Aage Martin Møller', 'Aage Møller', 'Aage Møller', 'Aage Møller', 'Aage Møller', 'Aage Møller', 'Aage Møller']\n"
+    },
+    {
+     "data": {
+      "text/plain": "['61 69 03 76',\n '75 50 75 14',\n '86 45 44 36',\n '76 42 00 81',\n '86 13 22 99',\n '97 95 20 01',\n '74 74 36 62',\n '45 80 47 14',\n '60 94 39 04',\n '35 38 97 81',\n '86 94 66 60',\n '20 44 00 35',\n '55 81 46 76',\n '20 83 70 65',\n '62 24 10 81',\n '20 83 88 62',\n '51 15 15 66',\n '28 59 06 93',\n '21 48 73 79',\n '64 82 11 54',\n '40 10 80 76',\n '21 79 64 18',\n '23 66 57 00',\n '60 45 79 69',\n '29 68 03 25']"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_names = re.compile(r'\\n\\n(.+)')\n",
+    "match_names = find_names.findall(addresses)\n",
+    "print(match_names)\n",
+    "\n",
+    "find_tel = re.compile(r'\\d{2} \\d{2} \\d{2} \\d{2}')\n",
+    "match_tel = find_tel.findall(addresses)\n",
+    "match_tel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -613,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   },
   "varInspector": {
    "cols": {
