changes to week8

--- a/07-1 webscraping.ipynb
+++ b/07-1 webscraping.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -402,13 +402,13 @@
        "'lecturer'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{'id': 'lecturer'}.get('id', 0)"
+    "{'id': 'lecturer'}.get('id')"
    ]
   },
   {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -508,8 +508,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<b>Showing 1-20 of 1379\r\n",
-      "events  in Cph. and Frederiksberg <span style=\"white-space: nowrap;\"> from/after 8 Mar 2020</span> </b>\n"
+      "<b>Showing 1-20 of 1365\r\n",
+      "events  in Cph. and Frederiksberg <span style=\"white-space: nowrap;\"> from/after 9 Mar 2020</span> </b>\n"
      ]
     }
    ],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -536,7 +536,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1379\n"
+      "1365\r\n",
+      "events\n",
+      "1365\n"
      ]
     }
    ],
@@ -555,7 +557,7 @@
     "el0 = elems[0]\n",
     "\n",
     "fifth = str(el0).split(' ')[5]\n",
-    "\n",
+    "print(fifth)\n",
     "number = int(str(fifth.split('\\n')[0]))\n",
     "#print(el0)\n",
     "#print(fifth)\n",
@@ -576,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -626,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -738,7 +740,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 69/69 [00:49<00:00,  1.40it/s]\n"
+      "100%|██████████| 69/69 [00:55<00:00,  1.25it/s]\n"
      ]
     }
    ],
@@ -792,22 +794,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[('Københavns Kammerkor øver.',\n",
+       "  'Davidskirken, Koldinggade 11, Copenhagen Ø',\n",
+       "  'Monday 12 October 2020, 6 pm.',\n",
+       "  ''),\n",
+       " ('Åben kirke.',\n",
+       "  'Mariakirken, Istedgade 20, Copenhagen V',\n",
+       "  'Tuesday 15 October 2020, 7 pm.',\n",
+       "  ''),\n",
+       " ('Arena (UK).',\n",
+       "  'Beta, Øresundsvej 6, Copenhagen S',\n",
+       "  'Friday 16 October 2020, 8 pm.',\n",
+       "  '(Entrance fee)'),\n",
+       " ('Sweet og Slade dobbeltkoncert.',\n",
+       "  'Docken København, Nordhavnen, Færgehavnsvej 35, Nordhavn',\n",
+       "  'Friday 16 October 2020, 8 pm.',\n",
+       "  '(Entrance fee)'),\n",
+       " ('Beethoven festival.',\n",
+       "  'Ansgarkirken, Mågevej 33, Copenhagen NV',\n",
+       "  'Monday 12 October 2020 to Friday 16 October 2020, 7.30 pm.',\n",
+       "  '(Free admission)'),\n",
+       " (\"Gilbert O'Sullivan.\",\n",
+       "  'Docken København, Nordhavnen, Færgehavnsvej 35, Nordhavn',\n",
+       "  'Saturday 17 October 2020, 8 pm.',\n",
+       "  '(Entrance fee)'),\n",
+       " ('Clawfinger (SE).',\n",
+       "  'Amager Bio, Øresundsvej 6, Copenhagen S',\n",
+       "  'Saturday 17 October 2020, 9 pm.',\n",
+       "  '(Entrance fee)'),\n",
+       " ('Barok-koncert.',\n",
+       "  'Godthaabskirken, Nyelandsvej 51A, Frederiksberg',\n",
+       "  'Sunday 18 October 2020, 4 pm.',\n",
+       "  ''),\n",
+       " ('Københavns Kammerkor øver.',\n",
+       "  'Davidskirken, Koldinggade 11, Copenhagen Ø',\n",
+       "  'Monday 19 October 2020, 6 pm.',\n",
+       "  ''),\n",
+       " ('Club Klondyke.',\n",
+       "  'Kulturhuset Krudttønden, Serridslevvej 2, Copenhagen Ø',\n",
+       "  'Monday 19 October 2020, 8 pm.',\n",
+       "  '(Entrance fee: 180 DKK)'),\n",
+       " ('Claus Hempler - solo.',\n",
+       "  'Hotel Cecil, Niels Hemmingsens Gade 10, Copenhagen K',\n",
+       "  'Tuesday 20 October 2020, 8 pm.',\n",
+       "  '(Entrance fee)'),\n",
+       " ('Tommy Emmanuel C.G.P.',\n",
+       "  'Amager Bio, Øresundsvej 6, Copenhagen S',\n",
+       "  'Tuesday 20 October 2020, 8 pm.',\n",
+       "  '(Entrance fee)'),\n",
+       " ('Orgel-musikkens kvarter.',\n",
+       "  'Kristkirken, Enghave Plads 18, Copenhagen V',\n",
+       "  'Wednesday 21 October 2020, 5 pm.',\n",
+       "  ''),\n",
+       " ('Claus Hempler - solo.',\n",
+       "  'Hotel Cecil, Niels Hemmingsens Gade 10, Copenhagen K',\n",
+       "  'Wednesday 21 October 2020, 8 pm.',\n",
+       "  '(Entrance fee)'),\n",
+       " ('Åben kirke.',\n",
+       "  'Mariakirken, Istedgade 20, Copenhagen V',\n",
+       "  'Tuesday 22 October 2020, 7 pm.',\n",
+       "  ''),\n",
+       " ('Klaveraften - Beethoven sonater!',\n",
+       "  'Lindevang Kirke, Hattensens Allé 12, Frederiksberg',\n",
+       "  'Tuesday 22 October 2020, 7.30 pm.',\n",
+       "  ''),\n",
+       " ('Orgel-musikkens kvarter.',\n",
+       "  'Kristkirken, Enghave Plads 18, Copenhagen V',\n",
+       "  'Friday 23 October 2020, 4 pm.',\n",
+       "  ''),\n",
+       " ('Malurt - K.B. Hallen.',\n",
+       "  'KB Hallen, Peter Bangs Vej 147, Frederiksberg',\n",
+       "  'Friday 23 October 2020, 8 pm.',\n",
+       "  '(Entrance fee: 445 DKK)'),\n",
+       " ('Faun.',\n",
+       "  'Pumpehuset, Studiestræde 52, Copenhagen V',\n",
+       "  'Friday 23 October 2020, 9 pm.',\n",
+       "  '(Entrance fee)'),\n",
+       " ('Beethoven symfonier nr. 1 & 5.',\n",
+       "  'Det kgl. Danske Musikkonservatoriums Koncertsal, Julius Thomsensgade 1, Frederiksberg C',\n",
+       "  'Saturday 24 October 2020, 4 pm.',\n",
+       "  '(Entrance fee: 245-365)')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = scrape_events_per_page('http://www.kultunaut.dk/perl/arrlist/type-nynaut/UK?Startnr=1481&showmap=&Area=Kbh.%20og%20Frederiksberg&periode=&Genre=Musik&')\n",
+    "result = scrape_events_per_page('http://www.kultunaut.dk/perl/arrlist/type-nynaut/UK?Startnr=1200&showmap=&Area=Kbh.%20og%20Frederiksberg&periode=&Genre=Musik&')\n",
     "result"
    ]
   },
@@ -826,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -836,89 +917,89 @@
     {
      "data": {
       "text/plain": [
-       "[('Morgenfernisering Installation Næsten Menneske.',\n",
-       "  'Blågårdens Bibliotek, Blågårds Plads 5, Copenhagen N',\n",
-       "  'Tuesday 23 January 2020, 7.30 am  - 9.30 am.',\n",
-       "  ''),\n",
-       " ('Fyraftenssang v. Johanne Schmidt-Nielsen, generalsekretær i Red Barnet.',\n",
-       "  'Vartov, Farvergade 27, Copenhagen K',\n",
-       "  'Tuesday 23 January 2020, 5 pm  - 6 pm.',\n",
-       "  '(Free admission)'),\n",
-       " ('CPHPHIL 60 minutes of Søren Huss.',\n",
-       "  'Det kgl. Danske Musikkonservatoriums Koncertsal, Julius Thomsensgade 1, Frederiksberg C',\n",
-       "  'Tuesday 23 January 2020, 6 pm  & 9 pm.',\n",
-       "  '(Entrance fee: 325-395 DKK + evt. gebyr)'),\n",
-       " ('Release - Nordic Lyric Pieces.',\n",
-       "  'Metronomen, Godthåbsvej 33, Frederiksberg',\n",
-       "  'Tuesday 23 January 2020, 7.30 pm.',\n",
-       "  '(Free admission)'),\n",
-       " ('Niclas Bardeleben Release Koncert - New Orleans jazz m. et dansk twist.',\n",
-       "  'Bartof Station, Solbjergvej 3, Frederiksberg',\n",
-       "  'Tuesday 23 January 2020, 8 pm.',\n",
-       "  '(Entrance fee: 100 DKK)'),\n",
-       " ('Vanja Santos Quintet - Bobuska.',\n",
-       "  'Bobuska - tilfældets have, Linnesgade 24, kælder tv., Copenhagen K',\n",
-       "  'Tuesday 23 January 2020, 8 pm.',\n",
-       "  '(Entrance fee: 140/70 DKK)'),\n",
-       " ('Gaardmans/ lauritsen quartet.',\n",
-       "  'Jazzcup, Gothersgade 107, Copenhagen K',\n",
-       "  'Friday 24 January 2020, 3.30 pm.',\n",
-       "  '(Entrance fee: 106 - 127.20)'),\n",
-       " ('Fredagskoncert.',\n",
-       "  'Trinitatis Kirke, Landemærket 2, Copenhagen K',\n",
-       "  'Friday 24 January 2020, 4.30 pm  - 5.30 pm.',\n",
-       "  ''),\n",
-       " ('CPHPHIL 60 minutes of Søren Huss.',\n",
-       "  'Det kgl. Danske Musikkonservatoriums Koncertsal, Julius Thomsensgade 1, Frederiksberg C',\n",
-       "  'Friday 24 January 2020, 6 pm  & 9 pm.',\n",
-       "  '(Entrance fee: 325-395 DKK + evt. gebyr)'),\n",
-       " ('Brazilian Bossa Nova and Latin Jazz with Rogério K.',\n",
-       "  'Caféen skjolds plads, Skjolds Plads 2, Copenhagen N',\n",
-       "  'Friday 24 January 2020, 6.00 pm.',\n",
-       "  '(Free admission)'),\n",
-       " ('Lars og Ludwig - Messiaen Quartet Copenhagen - Østerbro Koncertforening.',\n",
-       "  'Østerbro Koncertforening, Unitarernes Hus, Dag Hammarskjölds Alle 30, Copenhagen Ø',\n",
-       "  'Friday 24 January 2020, 7.30 pm.',\n",
-       "  '(Entrance fee: 130 DKK, men diverse rabatmuligheder)'),\n",
-       " ('Five Finger Death Punch + Special Guest: Megadeth - FÅ BILLETTER.',\n",
-       "  'Royal Arena, Hannemanns Allé 18-20, Copenhagen S',\n",
-       "  'Friday 24 January 2020, 7.30 pm.',\n",
-       "  '(Entrance fee: 400-600 DKK)'),\n",
-       " ('DR VokalEnsemblet: Himmelsk Kærlighed.',\n",
-       "  'Trinitatis Kirke, Landemærket 2, Copenhagen K',\n",
-       "  'Friday 24 January 2020, 7.30 pm  - 9 pm.',\n",
-       "  ''),\n",
-       " ('Rannok (DK) i Copenhagen Folk Club.',\n",
-       "  'Metronomen, Godthåbsvej 33, Frederiksberg',\n",
-       "  'Friday 24 January 2020, 8 pm.',\n",
-       "  '(Entrance fee: 100 /150)'),\n",
-       " ('Joshua Radin (US).',\n",
-       "  'Hotel Cecil, Niels Hemmingsens Gade 10, Copenhagen K',\n",
-       "  'Friday 24 January 2020, 8 pm.',\n",
-       "  '(Entrance fee: 225 DKK)'),\n",
-       " (\"Henrik Bøggild's Jazz Orchestra.\",\n",
-       "  'Christianshavns Beboerhus, Dronningensgade 34, Copenhagen K',\n",
-       "  'Friday 24 January 2020, 8 pm.',\n",
-       "  '(Free admission)'),\n",
-       " ('Vegas Udvalgte 2020 - Venteliste.',\n",
+       "[('The Marcus King Band (us) - Udsolgt.',\n",
        "  'VEGA, Enghavevej 40, Copenhagen V',\n",
-       "  'Friday 24 January 2020, 8.30 pm.',\n",
-       "  '(Entrance fee: 170 DKK)'),\n",
-       " ('Tigerswan.',\n",
-       "  'Beta, Øresundsvej 6, Copenhagen S',\n",
-       "  'Friday 24 January 2020, 9 pm.',\n",
+       "  'Monday 9 March 2020, 8 pm.',\n",
+       "  '(Entrance fee: 225 DKK)'),\n",
+       " ('Ginne Marker.',\n",
+       "  'Jazzhus Montmartre, Store Regnegade 19A, Copenhagen K',\n",
+       "  'Monday 9 March 2020, 8 pm.',\n",
+       "  '(Entrance fee: 110 DKK + evt. gebyr)'),\n",
+       " ('Med på Noderne.',\n",
+       "  'Drop Inn, Kompagnistræde 34, Copenhagen K',\n",
+       "  'Monday 9 March 2020, 8 pm.',\n",
+       "  '(Free admission)'),\n",
+       " ('Princess nokia (US).',\n",
+       "  'Pumpehuset, Studiestræde 52, Copenhagen V',\n",
+       "  'Monday 9 March 2020, 8 pm.',\n",
+       "  '(Entrance fee: 290 DKK)'),\n",
+       " ('Baby lydplaneter.',\n",
+       "  'Osramhuset, Valhalsgade 4, Copenhagen N',\n",
+       "  'Tuesday 10 March 2020, 12 am.',\n",
+       "  '(Entrance fee: 50 DKK + Gebyr)'),\n",
+       " ('Stemme og Chakra Frekvenser: Solar plexus.',\n",
+       "  'Metronomen, Godthåbsvej 33, Frederiksberg',\n",
+       "  'Tuesday 10 March 2020, 7 pm.',\n",
+       "  '(Entrance fee: 50 DKK)'),\n",
+       " ('Dr Pigekorets Forår Udsolgt.',\n",
+       "  'Holmens Kirkegård, Dag Hammarskjölds Allé 35, Copenhagen Ø',\n",
+       "  'Tuesday 10 March 2020, 7.30 pm.',\n",
+       "  '(Entrance fee: 210 DKK)'),\n",
+       " ('Ginne Marker.',\n",
+       "  'Jazzhus Montmartre, Store Regnegade 19A, Copenhagen K',\n",
+       "  'Tuesday 10 March 2020, 8 pm.',\n",
+       "  '(Entrance fee: 110 DKK + evt. gebyr)'),\n",
+       " ('Simple Minds 2020 - 40th Anniversary Tour - Udsolgt/venteliste.',\n",
+       "  'VEGA, Enghavevej 40, Copenhagen V',\n",
+       "  'Tuesday 10 March 2020, 8 pm.',\n",
        "  '(Entrance fee)'),\n",
-       " (\"Kayak Bar's Vinter Cumbia Party | Trypical Cumbia.\",\n",
-       "  'Kayak Bar, Børskaj 12, Copenhagen K',\n",
-       "  'Friday 24 January 2020, 9 pm.',\n",
-       "  '(Entrance fee: 70 DKK)'),\n",
-       " ('Blue Belles of Joy - Miriam Mandipira, Lea Thorlann & Pia Trøjgaard.',\n",
-       "  'Bartof Station, Solbjergvej 3, Frederiksberg',\n",
-       "  'Friday 24 January 2020, 9 pm.',\n",
-       "  '(Entrance fee: 120 DKK)')]"
+       " ('Little Dragon (se) - Udsolgt.',\n",
+       "  'VEGA, Enghavevej 40, Copenhagen V',\n",
+       "  'Tuesday 10 March 2020, 8 pm.',\n",
+       "  '(Entrance fee: 255 DKK)'),\n",
+       " ('Crazy Ivans.',\n",
+       "  'Kulturhuset Pilegården, Brønshøjvej 17, Brønshøj',\n",
+       "  'Tuesday 10 March 2020, 8 pm.',\n",
+       "  '(Entrance fee: 140 DKK)'),\n",
+       " ('Torres (US) + Harkin (UK).',\n",
+       "  'Loppen, Christiania, Bådsmandsstræde 43, Copenhagen K',\n",
+       "  'Tuesday 10 March 2020, 8.30 pm.',\n",
+       "  '(Entrance fee: 140 DKK)'),\n",
+       " ('Moseholm SuperBand.',\n",
+       "  'Huset KBH - Stardust, Rådhusstræde 13, 1. tv., Copenhagen K',\n",
+       "  'Tuesday 10 March 2020, 9 pm  - 11.30 pm.',\n",
+       "  '(Entrance fee: 150 DKK + gebyr)'),\n",
+       " ('Morgensang på Hovedbiblioteket #233.',\n",
+       "  'Københavns Hovedbibliotek, Krystalgade 15, Copenhagen K',\n",
+       "  'Wednesday 11 March 2020, 8.30 am  - 8.50 am.',\n",
+       "  ''),\n",
+       " ('Klassiske minikoncerter for små lyttere (0-2 år).',\n",
+       "  'K-I-B, Kulturhuset Islands Brygge, Islands Brygge 18, Copenhagen S',\n",
+       "  'Wednesday 11 March 2020, 1 pm.',\n",
+       "  '(Entrance fee: 40 DKK pr. voksen og pr. barn)'),\n",
+       " ('Klassiske minikoncerter for små lyttere (0-2 år).',\n",
+       "  'K-I-B, Kulturhuset Islands Brygge, Islands Brygge 18, Copenhagen S',\n",
+       "  'Wednesday 11 March 2020, 2 pm.',\n",
+       "  '(Entrance fee: 40 DKK pr. voksen og pr. barn)'),\n",
+       " ('18. novembers sangkor.',\n",
+       "  'Helligaandshuset, Valkendorfsgade  23, 1. sal, Copenhagen K',\n",
+       "  'Wednesday 11 March 2020, 4 pm.',\n",
+       "  '(Free admission)'),\n",
+       " ('Fyraftenskoncert - klaver og oplæsning ved Maria Bundgård.',\n",
+       "  'Sions Kirke, Østerbrogade 192, Copenhagen Ø',\n",
+       "  'Wednesday 11 March 2020, 5 pm.',\n",
+       "  ''),\n",
+       " ('Aftenmusik i fastetiden v/ organist Lars Sømod.',\n",
+       "  'Vor Frelsers Kirke, Sankt Annæ Gade 29, Copenhagen K',\n",
+       "  'Wednesday 11 March 2020, 5.30 pm.',\n",
+       "  ''),\n",
+       " ('Ung Jam.',\n",
+       "  'Drop Inn, Kompagnistræde 34, Copenhagen K',\n",
+       "  'Wednesday 11 March 2020, 7 pm.',\n",
+       "  '(Free admission)')]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
