--- a/07-2 Regular Expressions.ipynb
+++ b/07-2 Regular Expressions.ipynb
@@ -116,7 +116,8 @@
     "\n",
     "phone_num_reg = re.compile(r'\\d{2} \\d{2} \\d{2} \\d{2}')\n",
     "print(type(phone_num_reg))\n",
-    "address_entry = \"\"\"A Helge Gamborg Møller\n",
+    "address_entry = \"\"\"\n",
+    "A Helge Gamborg Møller\n",
     "Klostergade 28\n",
     "6760 Ribe\n",
     "61 69 03 76\"\"\"\n",
@@ -193,13 +194,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hans\n"
+     ]
+    }
+   ],
    "source": [
-    "## Exercise with search\n",
-    "In the following text find all the family names of everyone with first name Peter:\n",
-    "\n",
-    "\"Peter Hansen was meeting up with Jacob Fransen for a quick lunch, but first he had to go by Peter Beier to pick up some chokolate for his wife. Meanwhile Pastor Peter Jensen was going to church to give his sermon for the same 3 people in his parish. Those were Peter Kold and Henrik Halberg plus a third person who had recently moved here from Norway called Peter Harold\"."
+    "import re \n",
+    "p = re.compile(r'Hans')\n",
+    "txt = 'Der bor en mand der hedder Hans i det blå hus'\n",
+    "m = p.search(txt)\n",
+    "print(m.group(0)) "
    ]
   },
   {
@@ -231,6 +243,16 @@
     "\n",
     "\n",
     "If there are groups in the regular expression, then **findall() will return a list of tuples**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise with search\n",
+    "In the following text find all the family names of everyone with first name Peter:\n",
+    "\n",
+    "\"Peter Hansen was meeting up with Jacob Fransen for a quick lunch, but first he had to go by Peter Beier to pick up some chokolate for his wife. Meanwhile Pastor Peter Jensen was going to church to give his sermon for the same 3 people in his parish. Those were Peter Kold and Henrik Halberg plus a third person who had recently moved here from Norway called Peter Harold\"."
    ]
   },
   {
@@ -337,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -354,7 +376,7 @@
       "3: samt specialtegn\n",
       "4: ['her', 'er', 'både', 'tal', '123', 'og', 'bogstaver', 'samt', 'specialtegn']\n",
       "5: ['her er både tal ', ' og bogstaver, %&/ samt specialtegn.']\n",
-      "6: ['her']\n",
+      "6: []\n",
       "7: ['tegn.']\n"
      ]
     }
@@ -363,12 +385,12 @@
     "import re\n",
     "txt_string = 'her er både tal 123 og bogstaver, %&/ samt specialtegn.'\n",
     "\n",
-    "anything_after_numbers = re.compile(r'\\d{2}.+') # 2digits and anything after\n",
+    "anything_after_numbers = re.compile(r'\\d{2}.+',re.VERBOSE) # 2digits and anything after\n",
     "alpha_nummeric1 = re.compile(r'[a-zA-ZæøåÆØÅ0-9,. ]+') #not strict (allows many consecutive spaces)\n",
     "alpha_nummeric2 = re.compile(r'\\w+( \\w+)*')\n",
     "alpha_nummeric3 = re.compile(r'\\w{1,}') # one or more alphanummeric but NOT space\n",
     "not_a_digit = re.compile(r'\\D+')\n",
-    "match_start = re.compile(r'^her')\n",
+    "match_start = re.compile(r'^her') \n",
     "match_end = re.compile(r'tegn.$')\n",
     "\n",
     "r1 = anything_after_numbers.search(txt_string); print('1:',r1.group())\n",
@@ -383,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -391,13 +413,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Match 1 was found at 0-9: sdsdf 455\n",
-      "Group 1 found at 5-9:  455\n",
-      "Match 2 was found at 13-22: 2323 sdsd\n",
-      "Group 1 found at 17-22:  sdsd\n"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-5-66834027f5c8>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-66834027f5c8>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    regex = r\"\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
@@ -405,7 +425,8 @@
     "import re\n",
     "\n",
     "regex = r\"\\w+( \\w+)*\"\n",
-    "test_str = \"sdsdf 455 %% 2323 sdsd\"\n",
+    "test_str = \"\"\"sdsdf 455 %% 2323 sdsd\n",
+    "dsfsdf 3232 dfsd 23\"\"\"\n",
     "matches = re.finditer(regex, test_str, re.MULTILINE)\n",
     "\n",
     "for matchNum, match in enumerate(matches, start=1):    \n",
