update to webservice

--- a/08-2 Web services.ipynb
+++ b/08-2 Web services.ipynb
@@ -151,14 +151,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running server in cloud\n",
+    "## Running flask server in production\n",
+    "\n",
+    "When we run our flask server, we are actually running [Werkzeug's development WSGI server](https://palletsprojects.com/p/werkzeug/), and passing our flask app as the WSGI callable.\n",
+    "\n",
+    "This development server is not intended for use in production. It is not designed to be particularly efficient, stable, or secure.\n",
+    "\n",
+    "We must therefore replace the Werkzeug dev server with a production-ready WSGI server such as uWSGI when moving to production, no matter where the app will be available.\n",
+    "\n",
     "### WSGI standard interface\n",
-    "for communication between an application (or framework) and a web server.\n",
-    "- **WSGI** a set of specs to be followed by any uWSGI server\n",
-    "- **uWSGI** a server that upholds the WSGI specs and translates client requests to the application\n",
+    "WSGI (pronounced **Whiskey**) stands for: Web Server Gateway Interface and is a simple calling convention for web servers to forward requests to web applications or frameworks written in Python  \n",
+    "\n",
+    "- **WSGI** a set of specs to be followed by any WSGI server\n",
+    "- **uWSGI** a production ready server that upholds the WSGI specs and translates client requests to the application\n",
     "- **uwsgi** a binary wire protocol for communication between uWSGI server and a full sized web server like nginx\n",
     "\n",
-    "The web server (uWSGI) sends requests to the application by triggering a defined “callable”. The callable is simply an entry point into the application where the web server can call a function with some parameters. The expected parameters are a dictionary of environmental variables and a callable provided by the web server (uWSGI) component.\n",
+    "The web server (uWSGI) sends requests to the application by triggering a defined “callable”.   \n",
+    "The callable is simply an entry point into the application where the web server can call a function with some parameters.   \n",
+    "The expected parameters are a dictionary of environmental variables and a callable provided by the web server (uWSGI) component.\n",
     "\n",
     "In response, the application returns an iterable that will be used to generate the body of the client response.\n",
     "\n"
@@ -269,21 +279,17 @@
     "```\n",
     "\n",
     "### Step 6: Nginx\n",
-    "Create a new file: `sudo nano /etc/nginx/sites-available/flask_demo`:\n",
-    "\n",
+    "Modify the file: `sudo nano /etc/nginx/sites-available/default`:\n",
+    "And in the `server {...}` section add a new location:\n",
     "```yml\n",
     "server {\n",
-    "    listen 5000;\n",
-    "    server_name <your_domain> <www.your_domain>;\n",
-    "\n",
-    "    location / {\n",
+    "    ...\n",
+    "    location /flask_app/ {\n",
     "        include uwsgi_params;\n",
     "        uwsgi_pass unix:/home/<your user>/flask_demo/flask_app.sock;\n",
     "    }\n",
     "}\n",
     "```\n",
-    "Create a target link name on linux to point the flask_demo file to nginx's sites-enabled file:   \n",
-    "`sudo ln -s /etc/nginx/sites-available/flask_demo /etc/nginx/sites-enabled`  \n",
     "Test syntax errors on nginx: `sudo nginx -t`   \n",
     "Restart nginx: `sudo systemctl restart nginx`   \n",
     "\n",
@@ -296,7 +302,8 @@
     "`sudo less /var/log/nginx/access.log`: checks the Nginx access logs.  \n",
     "`sudo journalctl -u nginx`: checks the Nginx process logs.  \n",
     "`sudo journalctl -u flask_demo`: checks your Flask app’s uWSGI logs.  \n",
-    "\n"
+    "`sudo systemctl restart flask_demo`: restarts the service we made (do this after changes made to flask_app.py)  \n",
+    "`sudo systemctl restart nginx`: restarts nginx (do this after changes to `/etc/nginx/sites-enabled/default`)  \n"
    ]
   }
  ],
