--- a/08 Data Persistence.ipynb
+++ b/08 Data Persistence.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -28,7 +28,7 @@
      "output_type": "stream",
      "text": [
       "Henny Petersen hired from 2002-02-02 00:00:00 to 2002-02-03 23:00:00 is paid: 23000 DKR pr month\n",
-      "Hanne Hansen hired from 2002-04-03 00:00:00 to None is paid: 82127 DKR pr month\n",
+      "Hanne Hansen hired from 2002-04-03 00:00:00 to None is paid: 94446 DKR pr month\n",
       "Jesper Fårekylling hired from 2002-04-03 00:00:00 to 2018-07-06 22:00:00 is paid: 23000 DKR pr month\n",
       "aa bb hired from 2003-04-04 00:00:00 to 2003-05-05 00:00:00 is paid: 31400 DKR pr month\n",
       "Helga Juhlborg hired from 2003-01-17 00:00:00 to 2004-04-11 00:00:00 is paid: 34100 DKR pr month\n",
@@ -36,7 +36,8 @@
       "Helga Juhlborg hired from 2003-01-17 00:00:00 to 2004-04-11 00:00:00 is paid: 34100 DKR pr month\n",
       "Ulrik Volborg hired from 2003-03-03 00:00:00 to 2005-08-20 00:00:00 is paid: 21000 DKR pr month\n",
       "Ulla Willman hired from 2001-05-04 00:00:00 to 2005-12-24 00:00:00 is paid: 32000 DKR pr month\n",
-      "Ulfred Valberg hired from 2001-01-04 00:00:00 to 2006-10-30 00:00:00 is paid: 43000 DKR pr month\n"
+      "Ulfred Valberg hired from 2001-01-04 00:00:00 to 2006-10-30 00:00:00 is paid: 43000 DKR pr month\n",
+      "See what we send to mysql:  SELECT firstname, lastname, startdate, enddate, salary FROM pythondemo WHERE startdate BETWEEN '1960-01-01' AND '2004-12-31'\n"
      ]
     }
    ],
@@ -58,10 +59,17 @@
     "\n",
     "for (firstname, lastname, startdate, enddate, salary) in cursor:\n",
     "    print(\"{} {} hired from {} to {} is paid: {} DKR pr month\".format(firstname, lastname, startdate, enddate, salary))\n",
-    "\n",
+    "print('See what we send to mysql: ',cursor._last_executed)\n",
     "cursor.close()\n",
     "cnx.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,14 +120,89 @@
     "cursor.close()\n",
     "curA.close()\n",
     "curB.close()\n",
-    "cnx.close()\n"
+    "cnx.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'firstname': 'Henny',\n",
+       "  'lastname': 'Petersen',\n",
+       "  'startdate': datetime.datetime(2002, 2, 2, 0, 0),\n",
+       "  'enddate': datetime.datetime(2002, 2, 3, 23, 0),\n",
+       "  'salary': '23000'},\n",
+       " {'firstname': 'Hassan',\n",
+       "  'lastname': 'Hassani',\n",
+       "  'startdate': datetime.datetime(2018, 7, 7, 0, 0),\n",
+       "  'enddate': datetime.datetime(2020, 11, 12, 23, 0),\n",
+       "  'salary': '43000'},\n",
+       " {'firstname': 'Hanne',\n",
+       "  'lastname': 'Hansen',\n",
+       "  'startdate': datetime.datetime(2002, 4, 3, 0, 0),\n",
+       "  'enddate': None,\n",
+       "  'salary': '143641'},\n",
+       " {'firstname': 'Jesper',\n",
+       "  'lastname': 'Fårekylling',\n",
+       "  'startdate': datetime.datetime(2002, 4, 3, 0, 0),\n",
+       "  'enddate': datetime.datetime(2018, 7, 6, 22, 0),\n",
+       "  'salary': '23000'},\n",
+       " {'firstname': 'Janni',\n",
+       "  'lastname': 'Spiser',\n",
+       "  'startdate': datetime.datetime(2011, 5, 23, 0, 0),\n",
+       "  'enddate': None,\n",
+       "  'salary': '273984'},\n",
+       " {'firstname': 'aa',\n",
+       "  'lastname': 'bb',\n",
+       "  'startdate': datetime.datetime(2003, 4, 4, 0, 0),\n",
+       "  'enddate': datetime.datetime(2003, 5, 5, 0, 0),\n",
+       "  'salary': '31400'},\n",
+       " {'firstname': 'Helga',\n",
+       "  'lastname': 'Juhlborg',\n",
+       "  'startdate': datetime.datetime(2003, 1, 17, 0, 0),\n",
+       "  'enddate': datetime.datetime(2004, 4, 11, 0, 0),\n",
+       "  'salary': '34100'},\n",
+       " {'firstname': 'Helga',\n",
+       "  'lastname': 'Juhlborg',\n",
+       "  'startdate': datetime.datetime(2003, 1, 17, 0, 0),\n",
+       "  'enddate': datetime.datetime(2004, 4, 11, 0, 0),\n",
+       "  'salary': '34100'},\n",
+       " {'firstname': 'Helga',\n",
+       "  'lastname': 'Juhlborg',\n",
+       "  'startdate': datetime.datetime(2003, 1, 17, 0, 0),\n",
+       "  'enddate': datetime.datetime(2004, 4, 11, 0, 0),\n",
+       "  'salary': '34100'},\n",
+       " {'firstname': 'Ulrik',\n",
+       "  'lastname': 'Volborg',\n",
+       "  'startdate': datetime.datetime(2003, 3, 3, 0, 0),\n",
+       "  'enddate': datetime.datetime(2005, 8, 20, 0, 0),\n",
+       "  'salary': '21000'},\n",
+       " {'firstname': 'Ulla',\n",
+       "  'lastname': 'Willman',\n",
+       "  'startdate': datetime.datetime(2001, 5, 4, 0, 0),\n",
+       "  'enddate': datetime.datetime(2005, 12, 24, 0, 0),\n",
+       "  'salary': '32000'},\n",
+       " {'firstname': 'Ulfred',\n",
+       "  'lastname': 'Valberg',\n",
+       "  'startdate': datetime.datetime(2001, 1, 4, 0, 0),\n",
+       "  'enddate': datetime.datetime(2006, 10, 30, 0, 0),\n",
+       "  'salary': '43000'},\n",
+       " {'firstname': 'Helga',\n",
+       "  'lastname': 'Juhlborg',\n",
+       "  'startdate': datetime.datetime(2003, 1, 17, 0, 0),\n",
+       "  'enddate': datetime.datetime(2004, 4, 11, 0, 0),\n",
+       "  'salary': '34100'}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# with the build in dict cursor\n",
     "cnx = pymysql.connect(user='dev', password='ax2',host='127.0.0.1',port=3307,db='test') \n",
@@ -144,9 +227,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>firstname</th>\n",
+       "      <th>lastname</th>\n",
+       "      <th>startdate</th>\n",
+       "      <th>enddate</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Henny</td>\n",
+       "      <td>Petersen</td>\n",
+       "      <td>2002-02-02</td>\n",
+       "      <td>2002-02-03 23:00:00</td>\n",
+       "      <td>23000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Hassan</td>\n",
+       "      <td>Hassani</td>\n",
+       "      <td>2018-07-07</td>\n",
+       "      <td>2020-11-12 23:00:00</td>\n",
+       "      <td>43000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Hanne</td>\n",
+       "      <td>Hansen</td>\n",
+       "      <td>2002-04-03</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>143641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Jesper</td>\n",
+       "      <td>Fårekylling</td>\n",
+       "      <td>2002-04-03</td>\n",
+       "      <td>2018-07-06 22:00:00</td>\n",
+       "      <td>23000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Janni</td>\n",
+       "      <td>Spiser</td>\n",
+       "      <td>2011-05-23</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>273984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7</td>\n",
+       "      <td>aa</td>\n",
+       "      <td>bb</td>\n",
+       "      <td>2003-04-04</td>\n",
+       "      <td>2003-05-05 00:00:00</td>\n",
+       "      <td>31400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Helga</td>\n",
+       "      <td>Juhlborg</td>\n",
+       "      <td>2003-01-17</td>\n",
+       "      <td>2004-04-11 00:00:00</td>\n",
+       "      <td>34100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Helga</td>\n",
+       "      <td>Juhlborg</td>\n",
+       "      <td>2003-01-17</td>\n",
+       "      <td>2004-04-11 00:00:00</td>\n",
+       "      <td>34100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Helga</td>\n",
+       "      <td>Juhlborg</td>\n",
+       "      <td>2003-01-17</td>\n",
+       "      <td>2004-04-11 00:00:00</td>\n",
+       "      <td>34100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Ulrik</td>\n",
+       "      <td>Volborg</td>\n",
+       "      <td>2003-03-03</td>\n",
+       "      <td>2005-08-20 00:00:00</td>\n",
+       "      <td>21000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Ulla</td>\n",
+       "      <td>Willman</td>\n",
+       "      <td>2001-05-04</td>\n",
+       "      <td>2005-12-24 00:00:00</td>\n",
+       "      <td>32000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Ulfred</td>\n",
+       "      <td>Valberg</td>\n",
+       "      <td>2001-01-04</td>\n",
+       "      <td>2006-10-30 00:00:00</td>\n",
+       "      <td>43000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Helga</td>\n",
+       "      <td>Juhlborg</td>\n",
+       "      <td>2003-01-17</td>\n",
+       "      <td>2004-04-11 00:00:00</td>\n",
+       "      <td>34100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id firstname     lastname  startdate             enddate  salary\n",
+       "0    1     Henny     Petersen 2002-02-02 2002-02-03 23:00:00   23000\n",
+       "1    3    Hassan      Hassani 2018-07-07 2020-11-12 23:00:00   43000\n",
+       "2    4     Hanne       Hansen 2002-04-03                 NaT  143641\n",
+       "3    5    Jesper  Fårekylling 2002-04-03 2018-07-06 22:00:00   23000\n",
+       "4    6     Janni       Spiser 2011-05-23                 NaT  273984\n",
+       "5    7        aa           bb 2003-04-04 2003-05-05 00:00:00   31400\n",
+       "6    9     Helga     Juhlborg 2003-01-17 2004-04-11 00:00:00   34100\n",
+       "7   10     Helga     Juhlborg 2003-01-17 2004-04-11 00:00:00   34100\n",
+       "8   11     Helga     Juhlborg 2003-01-17 2004-04-11 00:00:00   34100\n",
+       "9   12     Ulrik      Volborg 2003-03-03 2005-08-20 00:00:00   21000\n",
+       "10  13      Ulla      Willman 2001-05-04 2005-12-24 00:00:00   32000\n",
+       "11  14    Ulfred      Valberg 2001-01-04 2006-10-30 00:00:00   43000\n",
+       "12  15     Helga     Juhlborg 2003-01-17 2004-04-11 00:00:00   34100"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# with pandas\n",
     "import pandas as pd \n",
@@ -160,20 +416,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "firstname    object\n",
-      "lastname     object\n",
-      "startdate    object\n",
-      "enddate      object\n",
-      "salary       object\n",
-      "dtype: object\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>firstname</th>\n",
+       "      <th>lastname</th>\n",
+       "      <th>startdate</th>\n",
+       "      <th>enddate</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ulrik</td>\n",
+       "      <td>Volborg</td>\n",
+       "      <td>2003-03-03</td>\n",
+       "      <td>2005-08-20</td>\n",
+       "      <td>21000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ulla</td>\n",
+       "      <td>Willman</td>\n",
+       "      <td>2001-05-04</td>\n",
+       "      <td>2005-12-24</td>\n",
+       "      <td>32000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ulfred</td>\n",
+       "      <td>Valberg</td>\n",
+       "      <td>2001-01-04</td>\n",
+       "      <td>2006-10-30</td>\n",
+       "      <td>43000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  firstname lastname   startdate     enddate salary\n",
+       "0     Ulrik  Volborg  2003-03-03  2005-08-20  21000\n",
+       "1      Ulla  Willman  2001-05-04  2005-12-24  32000\n",
+       "2    Ulfred  Valberg  2001-01-04  2006-10-30  43000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -185,15 +497,15 @@
     "#cnx = pymysql.connect(user='dev', password='ax2',host='127.0.0.1',port=3307,db='test') \n",
     "con_str = 'mysql+pymysql://dev:ax2@localhost:3307/test'\n",
     "engine = create_engine(con_str)\n",
-    "\n",
+    "connection = engine.raw_connection()\n",
     "df = pd.DataFrame({'firstname' : ['Ulrik', 'Ulla', 'Ulfred'],\n",
     "                  'lastname':['Volborg','Willman','Valberg'],\n",
     "                  'startdate':['2003-03-03','2001-05-04','2001-01-04'],\n",
     "                  'enddate':['2005-08-20','2005-12-24','2006-10-30'],\n",
     "                  'salary':['21000', '32000', '43000']})\n",
-    "#df = df.applymap(str)\n",
+    "df = df.applymap(str)\n",
     "df.to_sql('pythondemo',con=engine, if_exists='append', index = False)\n",
-    "print(df.dtypes)"
+    "df"
    ]
   },
   {
