--- a/08 Data Persistence.ipynb
+++ b/08 Data Persistence.ipynb
@@ -18,28 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Henny Petersen hired from 2002-02-02 00:00:00 to 2002-02-03 23:00:00 is paid: 23000 DKR pr month\n",
-      "Hanne Hansen hired from 2002-04-03 00:00:00 to None is paid: 82127 DKR pr month\n",
-      "Jesper Fårekylling hired from 2002-04-03 00:00:00 to 2018-07-06 22:00:00 is paid: 23000 DKR pr month\n",
-      "aa bb hired from 2003-04-04 00:00:00 to 2003-05-05 00:00:00 is paid: 31400 DKR pr month\n",
-      "Helga Juhlborg hired from 2003-01-17 00:00:00 to 2004-04-11 00:00:00 is paid: 34100 DKR pr month\n",
-      "Helga Juhlborg hired from 2003-01-17 00:00:00 to 2004-04-11 00:00:00 is paid: 34100 DKR pr month\n",
-      "Helga Juhlborg hired from 2003-01-17 00:00:00 to 2004-04-11 00:00:00 is paid: 34100 DKR pr month\n",
-      "Ulrik Volborg hired from 2003-03-03 00:00:00 to 2005-08-20 00:00:00 is paid: 21000 DKR pr month\n",
-      "Ulla Willman hired from 2001-05-04 00:00:00 to 2005-12-24 00:00:00 is paid: 32000 DKR pr month\n",
-      "Ulfred Valberg hired from 2001-01-04 00:00:00 to 2006-10-30 00:00:00 is paid: 43000 DKR pr month\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "import datetime\n",
@@ -57,7 +38,7 @@
     "cursor.execute(query, (hire_start, hire_end))\n",
     "\n",
     "for (firstname, lastname, startdate, enddate, salary) in cursor:\n",
-    "    print(\"{} {} hired from {} to {} is paid: {} DKR pr month\".format(firstname, lastname, startdate, enddate, salary))\n",
+    "  print(\"{} {} hired from {} to {} is paid: {} DKR pr month\".format(firstname, lastname, startdate, enddate, salary))\n",
     "\n",
     "cursor.close()\n",
     "cnx.close()"
@@ -69,12 +50,36 @@
    "source": [
     "## Class exercise Select\n",
     "1. choose a database and a table with content from your mysql server (running on vagrant)\n",
-    "2. using pymysql from a jupyter notebook read and print the content of the table\n"
+    "2. using mysql.connector from a jupyter notebook read and print the content of the table\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "1 Author 1\n2 Author 2\n"
+    }
+   ],
+   "source": [
+    "import pymysql\n",
+    "\n",
+    "cnx = pymysql.connect(user='dev', password='ax2', host='127.0.0.1', port=3307, db='Books')\n",
+    "\n",
+    "cursor = cnx.cursor()\n",
+    "\n",
+    "query = ('SELECT * from BOOK')\n",
+    "cursor.execute(query)\n",
+    "for(id, author) in cursor:\n",
+    "    print(id, author)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +88,8 @@
     "\n",
     "from decimal import Decimal\n",
     "from datetime import datetime, date, timedelta\n",
+    "\n",
+    "import mysql.connector\n",
     "\n",
     "# Connect with the MySQL Server\n",
     "cnx = pymysql.connect(user='dev', password='ax2',host='127.0.0.1',port=3307,db='test')  \n",
@@ -228,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   },
   "varInspector": {
    "cols": {
